--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+git init
+git add .
+git commit -m "Premier commit"
+git branch -M main
+git remote add origin https://github.com/RitonSS/mon-site.git
+git push -u origin main
+
 <!DOCTYPE html>
 <html>
 <head>
