--- a/index.html
+++ b/index.html
@@ -1,18 +1,42 @@
-git init
-git add .
-git commit -m "Premier commit"
-git branch -M main
-git remote add origin https://github.com/RitonSS/mon-site.git
-git push -u origin main
-
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
-    <title>Test Live Server</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mon site web</title>
+    <link rel="stylesheet" href="/Users/henri/Desktop/VS_Prog.html/Mise_a_jour.css">
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>Bienvenue dans Live Server !</p>
-    <p>Bonjour c'est mon premier site internet !!!</p>
+    <header>
+        <h1>Bienvenue sur mon site</h1>
+        <nav>
+            <ul>
+                <li><a href="#accueil">Accueil</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="accueil">
+            <h2>Présentation</h2>
+            <p>Ceci est une section d'accueil de ton site.</p>
+        </section>
+
+        <section id="services">
+            <h2>Nos Services</h2>
+            <p>Description des services ici.</p>
+        </section>
+
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Informations de contact ici.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 RitonSS_WEB</p>
+    </footer>
 </body>
 </html>
