--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mon site web</title>
-    <link rel="stylesheet" href="/Users/henri/Desktop/VS_Prog.html/Mise_a_jour.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
