Mise à jour du site

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <section id="accueil">
             <h2>Présentation</h2>
-            <p>Ceci est une section d'accueil de ton site.</p>
+            <p>Page de henriszabo, vous trouverez si-dessous des information.</p>
         </section>
 
         <section id="services">
@@ -36,7 +36,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 RitonSS_WEB</p>
+        <p>&copy; 2024 henriszabo_WEB</p>
     </footer>
 </body>
 </html>
